Changing folder structure

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"client": "npm run dev --prefix ..\\client",
+		"client": "npm run dev --prefix client",
 		"clientinstall": "npm install --prefix client",
 		"server": "nodemon server.js",
 		"app": "concurrently \"npm run server\" \"npm run client\" "
